add proxy setting

--- a/angular.json
+++ b/angular.json
@@ -71,7 +71,11 @@
               "browserTarget": "angular-todo-app:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "browserTarget": "angular-todo-app:build:build",
+            "proxyConfig": "./proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
